# sigil

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: color.rs  escape.rs  lib.rs  modifier.rs  parser.rs  sequence.rs  style.rs
